tests/expectations/parser/statement/let_mut_recover.out
Error [EPAR0370005]: expected = -- found 'x'
    --> test:4:17
     |
   4 |         let mut x = 0;
     |                 ^
